# CHIP8-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt  chip.cpp  chip.h  chipexception.h  common.h  debugger.cpp  debugger.h  device.cpp  device.h  display.cpp  display.h  font.h  opcodes.cpp  opcodes.h  specs.h
include/nibble/: nibble.h
